--- a/Desktop/rama/resource/mainwindow.ui
+++ b/Desktop/rama/resource/mainwindow.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>rama.ico</normaloff>rama.ico</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">background-color:transparent</string>
   </property>
